# wapor_africa

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: README.md  example_baixo.yaml  example_koga.yaml
docs/: finetuning.md  methodology.md  results.md
notebooks/: finetune_new_aoi.ipynb  inference_new_aoi.ipynb
scripts/: download_models.sh
src/wapor_downscale/: __init__.py
src/wapor_downscale/data_prep/: build_stack.py  common.py  download_wapor_l1.py  download_wapor_l2.py  download_wapor_l3.py  fetch_s2_gee.py  gee_utils.py  probe_l3_aoi.py  rainfall_chirps.py  rebuild_stack_l1.py  static_layers.py
src/wapor_downscale/inference/: eval_catboost.py  eval_ensemble.py  eval_prithvi.py  eval_swinir.py  eval_unet.py  predict_ensemble.py
src/wapor_downscale/models/: band_adapter.py  prithvi_backbone.py  prithvi_regression.py  swinir_model.py  unet_common.py
src/wapor_downscale/training/: train_catboost.py  train_prithvi.py  train_swinir.py  train_unet.py
