[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wapor-downscale"
version = "0.1.0"
description = "Deep-learning downscaling of FAO WaPOR AETI from 300m to 20m using SwinIR + Prithvi-V1 ensemble"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Z. Kiala and contributors" }]
keywords = ["wapor", "evapotranspiration", "super-resolution", "remote-sensing", "sentinel-2", "deep-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
  "rasterio>=1.3",
  "pyproj>=3.6",
  "shapely>=2.0",
  "geopandas>=0.14",
  "PyYAML>=6.0",
  "earthengine-api>=0.1.395",
  "requests>=2.31",
  "torch>=2.3",
  "torchvision>=0.18",
  "segmentation-models-pytorch>=0.3",
  "timm>=1.0",
  "einops>=0.7",
  "huggingface-hub>=0.20",
  "catboost>=1.2",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "matplotlib>=3.8",
]

[project.urls]
Repository = "https://github.com/ZoloKiala/wapor_africa"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["wapor_downscale*"]
